objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Enable_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_key__c</fullName>
        <label>JIRA key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>